src/app/components/user-info/user-info.scss
:host {
  display: block;
  margin-top: 1.6rem;

  @media (min-width: 768px) {
    margin-top: 2.4rem;
  }
}

.container {
  padding: 3.2rem 2.4rem 4.8rem;
  border-radius: var(--radius);
  box-shadow: var(--shadow);
  background-color: var(--card-color);

  position: relative;

  @media (min-width: 768px) {
    padding: 4rem;
  }

  @media (min-width: 1440px) {
    padding: 4.8rem;
    padding-left: 20.2rem;
  }
}

// Profile Start

.profile {
  display: grid;
  grid-template-columns: 8rem 1fr;
  gap: 1.9rem;
  align-items: center;

  @media (min-width: 768px) {
    grid-template-columns: 11.7rem 1fr;
    gap: 4.1rem;
  }

  @media (min-width: 1440px) {
    gap: 0;
    grid-template-columns: 1fr;
  }
}

.content {
  @media (min-width: 144px) {
    display: flex;
    justify-content: space-between;
    gap: 2rem;
  }
}

.profile-img {
  position: static;

  img {
    width: 100%;
    height: auto;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    border-radius: 100vmax;
  }

  @media (min-width: 1440px) {
    width: 11.7rem;
    position: absolute;
    top: 4.8rem;
    left: 4.8rem;
  }
}

h1 {
  font-size: 1.6rem;
  font-weight: bold;

  @media (min-width: 768px) {
    font-size: 2.6rem;
  }
}

.login {
  font-size: 1.3rem;
  color: var(--primary-color);

  @media (min-width: 768px) {
    font-size: 1.6rem;
    margin-top: 2px;
  }
}

.created {
  margin-top: 0.6rem;
  font-size: 1.3rem;
  color: var(--gray);
  font-weight: normal;

  @media (min-width: 768px) {
    font-size: 1.6rem;
    margin-top: 0.4rem;
  }

  @media (min-width: 1440px) {
    margin-top: 0;
  }
}

// Profile End

.description {
  font-size: 1.3rem;
  line-height: 1.92;
  color: var(--text-secondary);

  margin-block: 3.3rem 2.3rem;

  &.disabled {
    opacity: 0.75;
  }

  @media (min-width: 768px) {
    font-size: 1.5rem;
    margin-block: 2.4rem 3.2rem;
  }
}

// Stats Start

.stats {
  background-color: var(--body-bg);
  border-radius: var(--radius);

  padding-block: 1.9rem;

  display: grid;
  grid-template-columns: repeat(3, 1fr);

  @media (min-width: 768px) {
    padding: 1.5rem 3.2rem;
    justify-content: space-between;
    justify-items: start;
    gap: 3rem;
  }
}

.stat {
  display: flex;
  flex-direction: column;
  align-items: center;

  gap: 0.8rem;

  @media (min-width: 768px) {
    align-items: self-start;
  }

  h3 {
    font-size: 1.1rem;
    font-weight: normal;
    color: var(--text-secondary);

    @media (min-width: 768px) {
      font-size: 1.3rem;
      text-align: start;
    }
  }

  span {
    font-size: 1.6rem;
    font-weight: bold;

    @media (min-width: 768px) {
      font-size: 2.2rem;
      text-align: start;
    }
  }
}

// Stats End

// Details Start

.details {
  list-style: none;
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.6rem;

  margin-top: 2.4rem;

  @media (min-width: 768px) {
    margin-top: 3rem;
    grid-template-columns: 1fr 1fr;
    gap: 2.1rem;
  }

  @media (min-width: 1440px) {
    margin-top: 3.7rem;
  }
}

.detail {
  display: grid;
  align-items: center;
  grid-template-columns: 2.4rem 1fr;
  gap: 1.3rem;

  &.disabled {
    opacity: 0.5;
  }

  p,
  a {
    font-size: 1.3rem;
    color: var(--text-secondary);
    text-decoration: none;

    @media (min-width: 768px) {
      font-size: 1.5rem;
    }
  }

  a {
    outline: 0px solid var(--primary-color);
    outline-offset: 0.9rem;
    border-radius: 0.3rem;

    transition: outline 0.2s;

    &:hover {
      text-decoration: underline;
    }

    &:focus-visible {
      outline-width: 2px;
    }
  }
}

// Details End

